--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^1.1.5
   provider: ^6.0.3
   flutter_staggered_grid_view: ^0.6.2
+  font_awesome_flutter: ^10.2.1
+  animate_do: ^2.1.0
 
 dev_dependencies:
   flutter_test:
